# homelab_services

inventory_management/: Dockerfile  README.md  api.py  docker-compose.yml  requirements.txt  todo.md  web.py
inventory_management/static/: app.js  styles.css
inventory_management/templates/: index.html
inventory_management/tests/: test_api.py
the_dashboard/: .env.example  .gitignore  README.md  docker-compose.yml
the_dashboard/dashboard/: config.js
the_dashboard/dashboard/platform/: config-editor.html  config-validator.mjs  dashboard.js  global.css  global.js  index.html
the_dashboard/dashboard/widgets/: clocks.js  countdown.js  metar.js  netstats.js  search.js  status.js  text.js  todos.js
the_dashboard/gateway/: Dockerfile  gateway.js  package-lock.json  package.json
the_dashboard/gateway/platform/: config.js  responses.js
the_dashboard/gateway/platform/routes/: config.js  netstats.js  status.js
the_dashboard/gateway/widget-routes/: metar.js  todos.js
the_dashboard/netstats/: Dockerfile  index.js  package-lock.json  package.json
the_dashboard/nginx/: default.conf  nginx.conf
the_dashboard/tests/: smoke.mjs  validate-dashboard-config.mjs
todo_server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
todo_server/radicale/: config  users
todo_server/radicale/cert-init/: Dockerfile  generate-cert.sh
todo_server/tests/: test_org_files.py  test_sync.py  test_vtodo.py
todo_server/todo_sync/: __init__.py  api.py  caldav_client.py  cli.py  config.py  models.py  org_files.py  sync.py  vtodo.py
